[gd_scene load_steps=7 format=3 uid="uid://8gtm3igcn7ic"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_gs8rf"]
[ext_resource type="Texture2D" uid="uid://dljfal830idhe" path="res://Assets/Enemies/Gusano.png" id="2_rjl45"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hbxmn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rjl45")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rjl45")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cf6b"]
size = Vector2(27, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_jeall"]
radius = 53.5093

[sub_resource type="CircleShape2D" id="CircleShape2D_26moh"]
radius = 25.02

[node name="boss" type="CharacterBody2D" groups=["boss"]]
scale = Vector2(2, 2)
script = ExtResource("1_gs8rf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hbxmn")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_8cf6b")

[node name="detecting_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detecting_area"]
shape = SubResource("CircleShape2D_jeall")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_26moh")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -10.0
offset_top = 15.0
offset_right = 190.0
offset_bottom = 42.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="detecting_area" to="." method="_on_detecting_area_body_entered"]
[connection signal="body_exited" from="detecting_area" to="." method="_on_detecting_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
